crates/reposix-cache/tests/compile-fail/tainted_blob_into_egress.stderr
error[E0308]: mismatched types
  --> tests/compile-fail/tainted_blob_into_egress.rs:21:17
   |
21 |     sink_egress(tainted);
   |     ----------- ^^^^^^^ expected `Untainted<Vec<u8>>`, found `Tainted<Vec<u8>>`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected struct `Untainted<Vec<u8>>`
              found struct `Tainted<Vec<u8>>`
note: function defined here
  --> src/sink.rs
   |
   | pub fn sink_egress(_bytes: reposix_core::Untainted<Vec<u8>>) {
   |        ^^^^^^^^^^^
